2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_get_grub_dev):
	Fix a memory leak.
	(grub_util_biosdisk_get_grub_dev): Add a useful debug info.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (find_system_device): Fix a memory leak.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/lvm.h (grub_lvm_pv): Correct start type.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix spaces handling in proc/self/mountinfo.

	* util/getroot.c (unescape): New function.
	(grub_find_root_device_from_mountinfo): Use unescape.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Support ZFS embedding.

	* grub-core/fs/zfs/zfs.c (grub_zfs_embed): New function.
	(grub_zfs_fs): Register grub_zfs_embed.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix MIPS compilation.

	* grub-core/boot/mips/startup_raw.S: Use GRUB_DECOMPRESSOR_*
	* include/grub/offsets.h: Rename decompressor fields from
	GRUB_KERNEL_* to GRUB_DECOMPRESSOR_*.
	* util/grub-mkimage.c (image_targets): Use new names.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Defer multiboot device parsing until we're in compressed part.

	* grub-core/boot/i386/pc/lnxboot.S: Remove setting dos_part and
	bsd_part. setdevice has fallen into disuse.
	* grub-core/boot/i386/pc/startup_raw.S (dos_part): Removed.
	(bsd_part): Likewise.
	(boot_dev): New variable.
	(multiboot_trampoline): Don't parse multiboot device.
	Pass multiboot device in %edx.
	* grub-core/disk/i386/pc/biosdisk.c (GRUB_MOD_INIT): Parse
	grub_boot_device.
	* grub-core/kern/i386/pc/init.c (grub_machine_get_bootlocation):
	Likewise.
	* grub-core/kern/i386/pc/startup.S: Save edx.
	(grub_boot_drive): Removed.
	(grub_install_dos_part): Likewise.
	(grub_install_bsd_part): Likewise.
	(grub_boot_device): New variable.
	* include/grub/i386/pc/kernel.h (grub_install_dos_part): Removed.
	(grub_install_bsd_part): Likewise.